fix home horizontal scroll

--- a/app/assets/sass/_pages/_project.scss
+++ b/app/assets/sass/_pages/_project.scss
@@ -1,5 +1,8 @@
 #main.project {
   padding: 2rem 4rem;
+  max-width: 100vw;
+  overflow-x:hidden;
+  
   .wrap {
     background: white;
   }
